---
source: src/syntax/tests/mod.rs
expression: err
---
Error: parser::empty_block

  × empty blocks are disallowed
   ╭─[empty_block.ppl:1:1]
 1 │ loop:
   · ──┬─
   ·   ╰── this item has empty block
   ╰────
